telerun-out/0199431/compile-log.txt
/tmp/tmpetl1o14e/source.cu(345): error: identifier "ilp" is undefined
              if (j + ilp * j_stride_wo_ilp >= img_size) {
                      ^

1 error detected in the compilation of "/tmp/tmpetl1o14e/source.cu".
